trunk/Archive2/4b/f4d8f3f928ff15/output
main.cpp:1:23: warning: extra tokens at end of #include directive [enabled by default]
  #include <algorithm> # Include <algorithm>
                       ^
main.cpp:2:21: warning: extra tokens at end of #include directive [enabled by default]
 #include <iostream> # Include <iostream>
                     ^
main.cpp:9:35: warning: multi-character character constant [-Wmultichar]
    std:: cout << a << ' ' << b << ' \n ' ; std :: cout << a << '' << b << '\ n';
                                   ^
main.cpp:9:64: error: empty character constant
    std:: cout << a << ' ' << b << ' \n ' ; std :: cout << a << '' << b << '\ n';
                                                                ^
main.cpp:9:75: warning: unknown escape sequence: '\040' [enabled by default]
    std:: cout << a << ' ' << b << ' \n ' ; std :: cout << a << '' << b << '\ n';
                                                                           ^
main.cpp:9:75: warning: multi-character character constant [-Wmultichar]
main.cpp:14:35: warning: multi-character character constant [-Wmultichar]
    std:: cout << a << ' ' << b << ' \n ' ; std :: cout << a << '' << b << '\ n';
                                   ^
main.cpp:14:64: error: empty character constant
    std:: cout << a << ' ' << b << ' \n ' ; std :: cout << a << '' << b << '\ n';
                                                                ^
main.cpp:14:75: warning: unknown escape sequence: '\040' [enabled by default]
    std:: cout << a << ' ' << b << ' \n ' ; std :: cout << a << '' << b << '\ n';
                                                                           ^
main.cpp:14:75: warning: multi-character character constant [-Wmultichar]
main.cpp:4:5: warning: unused parameter 'argc' [-Wunused-parameter]
 int main(int argc, char *argv[])
     ^
main.cpp:4:5: warning: unused parameter 'argv' [-Wunused-parameter]
